--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <div class="nav">
                 <div class="list" id="list1">
                     <div class="img">
-                        <img src="/project/images/login/Student" alt="" srcset="">
+                        <img src="/images/login/Student" alt="" srcset="">
                     </div>
                     <h6 id="student">Student</h6>
                 </div>
