--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <title>login</title>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
@@ -22,13 +22,13 @@
             <div class="nav">
                 <div class="list" id="list1">
                     <div class="img">
-                        <img src="/images/login/Student" alt="" srcset="">
+                        <img src="images/login/Student" alt="" srcset="">
                     </div>
                     <h6 id="student">Student</h6>
                 </div>
                 <div class="list" id="list2">
                     <div class="img">
-                        <img src="/project/images/login/teacher.svg" alt="" srcset="">
+                        <img src="images/login/teacher.svg" alt="" srcset="">
                     </div>
                     Teacher
                 </div>
