--- a/login.html
+++ b/login.html
@@ -34,13 +34,13 @@
                 </div>
                 <div class="list" id="list3">
                     <div class="img">
-                        <img src="/project/images/login/parent" alt="" srcset="">
+                        <img src="images/login/parent" alt="" srcset="">
                     </div>
                     Parent
                 </div>
                 <div class="list" id="list4">
                     <div class="img">
-                        <img src="/project/images/login/school" alt="School" srcset="">
+                        <img src="images/login/school" alt="School" srcset="">
                     </div>
                     School Leader
                 </div>
@@ -53,13 +53,13 @@
     <div class="navigation">
         <div class="login">
             <div class="image">
-                <img src="/project/images/login/phone" alt="" srcset="">
+                <img src="images/login/phone" alt="" srcset="">
             </div>
             <div class="form">
                 <div class="login1">
                     <h4>Login</h4>
                     <div class="svgs">
-                        <img src="/project/images/login/phone.svg" alt="" srcset="">
+                        <img src="images/login/phone.svg" alt="" srcset="">
                         <input class="input" type="text" name="" id="" placeholder="Email or Phone number">.
                     </div>
                 </div>
@@ -67,12 +67,12 @@
                 <div class="login2">
                     <h4>-OR-</h4>
                     <div class="svgs">
-                        <img src="/project/images/login/admissionNumber.svg" alt="" srcset="">
+                        <img src="images/login/admissionNumber.svg" alt="" srcset="">
                         <input class="input" type="text" name="" id="" placeholder="Your admission number"><br>
                     </div>
                     <br>
                     <div class="svgs">
-                        <img src="/project/images/login/password.svg" alt="" srcset="">
+                        <img src="images/login/password.svg" alt="" srcset="">
                         <input class="input" type="password" name="" id="" placeholder="Password"><br>
                     </div>
                     <br>
