--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="/project/css/dashboard.css">
+    <link rel="stylesheet" href="css/dashboard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -20,27 +20,27 @@
             </div>
             <div class="items">
                 <div class="item dashboard">
-                    <img src="/project/images/dashboard/dashboard.svg" alt="">
+                    <img src="images/dashboard/dashboard.svg" alt="">
                     <p>Dashboard</p>
                 </div>
                 <div class="item">
-                    <img src="/project/images/dashboard/select-chapter.svg" alt="">
+                    <img src="images/dashboard/select-chapter.svg" alt="">
                     <p>Select chapter</p>
                 </div>
                 <div class="item">
-                    <img src="/project/images/dashboard/MyClass2" alt="" srcset="">
+                    <img src="images/dashboard/MyClass2" alt="" srcset="">
                     <p>My Class</p>
                 </div>
                 <div class="item">
-                    <img src="/project/images/dashboard/classForum" alt="" srcset="">
+                    <img src="images/dashboard/classForum" alt="" srcset="">
                     <p>Class Forum</p>
                 </div>
                 <div class="item">
-                    <img src="/project/images/dashboard/MyProgress2" alt="" srcset="">
+                    <img src="images/dashboard/MyProgress2" alt="" srcset="">
                     <p>My Progress</p>
                 </div>
                 <div class="item">
-                    <img src="/project/images/dashboard/TeacherNote2" alt="" srcset="">
+                    <img src="images/dashboard/TeacherNote2" alt="" srcset="">
                     <p>Teacher Note</p>
                 </div>
             </div>
@@ -48,29 +48,29 @@
         <div class="cnt2">
             <div class="one">
                 <div class="assests">
-                    <img src="/project/images/dashboard/assests.png" alt="" srcset="">
+                    <img src="images/dashboard/assests.png" alt="" srcset="">
                 </div>
                 <div class="slides">
                     <div class="heading">
                         <p>Your Achievements</p>
                     </div>
                     <div class="awards">
-                        <img src="/project/images/dashboard/HelloWorld" alt="" srcset="">
+                        <img src="images/dashboard/HelloWorld" alt="" srcset="">
                         <p>Hello World</p>
                     </div>
                     <div class="awards">
-                        <img src="/project/images/dashboard/Know-it-all" alt="" srcset="">
+                        <img src="images/dashboard/Know-it-all" alt="" srcset="">
                         <p>Know-it-all</p>
                     </div>
                     <div class="awards">
-                        <img src="/project/images/dashboard/gifted" alt="" srcset="">
+                        <img src="images/dashboard/gifted" alt="" srcset="">
                         <p>Gifted</p>
                     </div>
                 </div>
             </div>
             <div class="two">
                 <div class="picture">
-                    <img src="/project/images/dashboard/AkankshaSingh" alt="" srcset="">
+                    <img src="images/dashboard/AkankshaSingh" alt="" srcset="">
                     <p>Akanksha Singh</p>
                 </div>
                 <div class="points">
@@ -83,26 +83,26 @@
             </div>
             <div class="three">
                 <div class="Myclass img">
-                    <img src="/project/images/dashboard/myclass" alt="" srcset="">
+                    <img src="images/dashboard/myclass" alt="" srcset="">
                     <p>My Class</p>
                 </div>
                 <div class="classForum img">
-                    <img src="/project/images/dashboard/classForum" alt="" srcset="">
+                    <img src="images/dashboard/classForum" alt="" srcset="">
                     <p>Class Forum</p>
                 </div>
                 <div class="Myprogress img">
-                    <img src="/project/images/dashboard/myprogress" alt="" srcset="">
+                    <img src="images/dashboard/myprogress" alt="" srcset="">
                     <p>My Progress</p>
                 </div>
                 <div class="teacherNote img">
-                    <img src="/project/images/dashboard/teacherNote" alt="" srcset="">
+                    <img src="images/dashboard/teacherNote" alt="" srcset="">
                     <p>Teacher Note</p>
                 </div>
             </div>
             <div class="four">
                 <div class="avatar">
                     <p>Avator Name</p>
-                    <img src="/project/images/dashboard/Avatar" alt="" srcset="">
+                    <img src="images/dashboard/Avatar" alt="" srcset="">
                 </div>
                 <div class="upgrade">
                     <button>Upgrade</button>
